--- a/Predict virality of newspaper article using web scrapping/web scrapping.ipynb
+++ b/Predict virality of newspaper article using web scrapping/web scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 1272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
     "HT_url=[]\n",
     "IE_url=[]\n",
     "for i in range(1,4):\n",
-    "    TOI_url.append('https://timesofindia.indiatimes.com/mostread.cms?day=1{}{}'.format('&curpg=',i))\n",
-    "    HT_url.append('https://www.hindustantimes.com/world-news/{}{}'.format('page/?pageno=',i))\n",
-    "    IE_url.append('https://indianexpress.com/section/world/{}{}'.format('page/',i))"
+    "    TOI_url.append('https://timesofindia.indiatimes.com/mostread.cms?day=1{}{}'.format('&curpg=',i))# Times of India url\n",
+    "    HT_url.append('https://www.hindustantimes.com/world-news/{}{}'.format('page/?pageno=',i))# Hindustan Times Url\n",
+    "    IE_url.append('https://indianexpress.com/section/world/{}{}'.format('page/',i))# Indian Express url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
+   "execution_count": 1278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1038,
+   "execution_count": 1282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1039,
+   "execution_count": 1283,
    "metadata": {},
    "outputs": [
     {
@@ -277,15 +277,7 @@
     "for i in range(len(column_names)):\n",
     "    col=re.sub('[\\s]+','',str(column_names[i]))# remove extra spaces from coulmns\n",
     "    columns.append(col)\n",
-    "    print('column',i+1,': ',column_names[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1040,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print('column',i+1,': ',column_names[i])\n",
     "data.columns=columns"
    ]
   },
